@@ -18,10 +18,8 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Open3D from the PyPI repositories
-RUN python3 -m pip install --no-cache-dir --upgrade pip && \
-    python3 -m pip install --no-cache-dir --upgrade numpy && \
-    python3 -m pip install --no-cache-dir --upgrade matplotlib && \
-    python3 -m pip install --no-cache-dir --upgrade open3d
+RUN python3 -m pip install --no-cache-dir --upgrade pip numpy matplotlib open3d
+
 
 RUN mkdir -p /app
 
